--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title></title>
 </head>
-<body>
 
+<body>
     <header>
+        <div class="logo">
+            <h1>ohmyfood</h1>
+        </div>
     </header>
 
+    <div class="main-bloc">
+        <div class="menu-section">
+            <div class="top-section">
+                <section>
+                    <div class="menu">MENU</div>
+                </section>
+                <section>
+                    <div class="menu">MENU</div>
+                </section>
+            </div>
+            <div class="bottom-section">
+                <section>
+                    <div class="menu">MENU</div>
+                </section>
+                <section>
+                    <div class="menu">MENU</div>
+                </section>
+            </div>
+        </div>
+    </div>
+
+    <div class="soon">
+        <div class="btn">Prochainement</div>
+    </div>
+
+
+    <footer>
+        <div class="legal-notice">Mentions légales</div>
+        <div class="contact-us">Contactez-nous</div>
+    </footer>
 </body>
+
 </html>
