--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </header>
 
     <div class="main-bloc">
-        <div class="menu-section">
-            <div class="top-section">
+        <div class="main-section">
+            <div class="main-section__top">
                 <section>
                     <div class="menu">MENU</div>
                 </section>
@@ -26,7 +26,7 @@
                     <div class="menu">MENU</div>
                 </section>
             </div>
-            <div class="bottom-section">
+            <div class="main-section__bottom">
                 <section>
                     <div class="menu">MENU</div>
                 </section>
@@ -44,7 +44,11 @@
 
     <footer>
         <div class="legal-notice">Mentions légales</div>
-        <div class="contact-us">Contactez-nous</div>
+        <div class="contact-us">
+            <a href="mailto:marieparet.33@gmail.com">
+                Contactez-nous
+            </a>
+        </div>
     </footer>
 </body>
 
