--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
+    <link rel="stylesheet" href="assets/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css" media="all and (max-width: 700px)">
     <title></title>
 </head>
 
@@ -18,26 +21,47 @@
 
     <div class="main-bloc">
         <div class="main-section">
-            <div class="main-section__top">
-                <section>
-                    <div class="menu">MENU</div>
-                </section>
-                <section>
-                    <div class="menu">MENU</div>
-                </section>
-            </div>
-            <div class="main-section__bottom">
-                <section>
-                    <div class="menu">MENU</div>
-                </section>
-                <section>
-                    <div class="menu">MENU</div>
-                </section>
-            </div>
+
+            <section class="top-main-section">
+
+                <div class="card menu__box menu--la-note-enchantee">
+                    <div class="menu__box-content">
+                        <i class="fas fa-music"></i>
+                        <h2>La note enchantée</h2>
+                        <p>MENU</p>
+                    </div>
+                </div>
+
+                <div class="card menu__box menu--le-chic-a-la-francaise">
+                    <div class="menu__box-content">
+                        <h2>Le chic à la française</h2>
+                        <p>MENU</p>
+                    </div>
+                </div>
+
+            </section>
+
+            <section class="bottom-main-section">
+
+                <div class="card menu__box menu--le-delice-des-papilles">
+                    <div class="menu__box-content">
+                        <h2>Le délice des papilles</h2>
+                        <p>MENU</p>
+                    </div>
+                </div>
+
+                <div class="card menu__box menu--la-palette-du-gout">
+                    <div class="menu__box-content">
+                        <h2>La palette du goût</h2>
+                        <p>MENU</p>
+                    </div>
+                </div>
+
+            </section>
         </div>
     </div>
 
-    <div class="soon">
+    <div class="soon-btn">
         <div class="btn">Prochainement</div>
     </div>
 
