--- a/index.html
+++ b/index.html
@@ -24,38 +24,38 @@
 
             <section class="top-main-section">
 
-                <div class="card menu__box menu--la-note-enchantee">
+                <a href="./la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
                     <div class="menu__box-content">
                         <i class="fas fa-music"></i>
                         <h2>La note enchantée</h2>
                         <p>MENU</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="card menu__box menu--le-chic-a-la-francaise">
+                <a href="./le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
                     <div class="menu__box-content">
                         <h2>Le chic à la française</h2>
                         <p>MENU</p>
                     </div>
-                </div>
+                </a>
 
             </section>
 
             <section class="bottom-main-section">
 
-                <div class="card menu__box menu--le-delice-des-papilles">
+                <a href="./le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
                     <div class="menu__box-content">
                         <h2>Le délice des papilles</h2>
                         <p>MENU</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="card menu__box menu--la-palette-du-gout">
+                <a href="./la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
                     <div class="menu__box-content">
                         <h2>La palette du goût</h2>
                         <p>MENU</p>
                     </div>
-                </div>
+                </a>
 
             </section>
         </div>
@@ -67,12 +67,13 @@
 
 
     <footer>
-        <div class="legal-notice">Mentions légales</div>
-        <div class="contact-us">
-            <a href="mailto:marieparet.33@gmail.com">
+            <a href="./mentions_legales.html" class="legal-notice">
+                Mentions légales
+            </a>
+
+            <a href="mailto:marieparet.33@gmail.com" class="contact-us">
                 Contactez-nous
             </a>
-        </div>
     </footer>
 </body>
 
