--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <section class="top-main-section">
 
-                <a href="./la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
+                <a href="./menu/la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
                     <div class="menu__box-content">
                         <i class="fas fa-music"></i>
                         <h2>La note enchantée</h2>
@@ -32,7 +32,7 @@
                     </div>
                 </a>
 
-                <a href="./le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
+                <a href="./menu/le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
                     <div class="menu__box-content">
                         <h2>Le chic à la française</h2>
                         <p>MENU</p>
@@ -43,14 +43,14 @@
 
             <section class="bottom-main-section">
 
-                <a href="./le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
+                <a href="./menu/le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
                     <div class="menu__box-content">
                         <h2>Le délice des papilles</h2>
                         <p>MENU</p>
                     </div>
                 </a>
 
-                <a href="./la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
+                <a href="./menu/la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
                     <div class="menu__box-content">
                         <h2>La palette du goût</h2>
                         <p>MENU</p>
