--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
     <link rel="stylesheet" href="assets/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css" media="all and (max-width: 700px)">
@@ -19,47 +20,38 @@
         </div>
     </header>
 
-    <div class="main-bloc">
-        <div class="main-section">
+    <main>
 
-            <section class="top-main-section">
+        <a href="./menu/la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
+            <div class="menu__box-content">
+                <i class="fas fa-music"></i>
+                <h2>La note enchantée</h2>
+                <p>MENU</p>
+            </div>
+        </a>
 
-                <a href="./menu/la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
-                    <div class="menu__box-content">
-                        <i class="fas fa-music"></i>
-                        <h2>La note enchantée</h2>
-                        <p>MENU</p>
-                    </div>
-                </a>
+        <a href="./menu/le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
+            <div class="menu__box-content">
+                <h2>Le chic à la française</h2>
+                <p>MENU</p>
+            </div>
+        </a>
 
-                <a href="./menu/le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
-                    <div class="menu__box-content">
-                        <h2>Le chic à la française</h2>
-                        <p>MENU</p>
-                    </div>
-                </a>
+        <a href="./menu/le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
+            <div class="menu__box-content">
+                <h2>Le délice des papilles</h2>
+                <p>MENU</p>
+            </div>
+        </a>
 
-            </section>
-
-            <section class="bottom-main-section">
-
-                <a href="./menu/le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
-                    <div class="menu__box-content">
-                        <h2>Le délice des papilles</h2>
-                        <p>MENU</p>
-                    </div>
-                </a>
-
-                <a href="./menu/la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
-                    <div class="menu__box-content">
-                        <h2>La palette du goût</h2>
-                        <p>MENU</p>
-                    </div>
-                </a>
-
-            </section>
-        </div>
-    </div>
+        <a href="./menu/la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
+            <div class="menu__box-content">
+                <h2>La palette du goût</h2>
+                <p>MENU</p>
+            </div>
+        </a>
+        
+    </main>
 
     <div class="soon-btn">
         <div class="btn">Prochainement</div>
@@ -67,13 +59,13 @@
 
 
     <footer>
-            <a href="./mentions_legales.html" class="legal-notice">
-                Mentions légales
-            </a>
+        <a href="./mentions_legales.html" class="legal-notice">
+            Mentions légales
+        </a>
 
-            <a href="mailto:marieparet.33@gmail.com" class="contact-us">
-                Contactez-nous
-            </a>
+        <a href="mailto:marieparet.33@gmail.com" class="contact-us">
+            Contactez-nous
+        </a>
     </footer>
 </body>
 
