add meta, title in head and start pages

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
+    <title>Ohmyfood!</title>
+    <meta name="description" content="Consultez le menu de 4 grands restaurants parisiens !">
+    <link rel="shortcut icon" href="assets/image/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
     <link rel="stylesheet" href="assets/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css" media="all and (max-width: 700px)">
-    <title></title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
     <main>
 
-        <a href="./menu/la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
+        <a href="./pages/la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
             <div class="menu__box-content">
                 <i class="fas fa-music"></i>
                 <h2>La note enchantée</h2>
@@ -30,27 +30,27 @@
             </div>
         </a>
 
-        <a href="./menu/le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
+        <a href="./pages/le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
             <div class="menu__box-content">
                 <h2>Le chic à la française</h2>
                 <p>MENU</p>
             </div>
         </a>
 
-        <a href="./menu/le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
+        <a href="./pages/le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
             <div class="menu__box-content">
                 <h2>Le délice des papilles</h2>
                 <p>MENU</p>
             </div>
         </a>
 
-        <a href="./menu/la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
+        <a href="./pages/la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
             <div class="menu__box-content">
                 <h2>La palette du goût</h2>
                 <p>MENU</p>
             </div>
         </a>
-        
+
     </main>
 
     <div class="soon-btn">
