--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main>
 
-        <a href="./pages/la_note_enchantee.html" class="card menu__box menu--la-note-enchantee">
+        <a href="./pages/la_note_enchantee.html" class="card menu menu--la-note-enchantee">
             <div class="menu__box-content">
                 <i class="fas fa-music"></i>
                 <h2>La note enchantée</h2>
@@ -30,24 +30,24 @@
             </div>
         </a>
 
-        <a href="./pages/le_chic_a_la_francaise.html" class="card menu__box menu--le-chic-a-la-francaise">
+        <a href="./pages/le_chic_a_la_francaise.html" class="card menu--le-chic-a-la-francaise">
             <div class="menu__box-content">
                 <h2>Le chic à la française</h2>
-                <p>MENU</p>
+                <p>Menu</p>
             </div>
         </a>
 
         <a href="./pages/le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
             <div class="menu__box-content">
                 <h2>Le délice des papilles</h2>
-                <p>MENU</p>
+                <p>Menu</p>
             </div>
         </a>
 
         <a href="./pages/la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
             <div class="menu__box-content">
                 <h2>La palette du goût</h2>
-                <p>MENU</p>
+                <p>Menu</p>
             </div>
         </a>
 
