add menu themes map and menu style

--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ohmyfood!</title>
-    <meta name="description" content="Consultez le menu de 4 grands restaurants parisiens !">
+    <title>La note enchantée | Ohmyfood!</title>
     <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
     <link rel="stylesheet" href="../assets/font-awesome/css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
 </head>
@@ -20,7 +20,46 @@
         </div>
     </header>
 
+    <div class="menu__header">
+        <h1>La note enchantée</h1>
+    </div>
 
+    <main class="menu--main">
+        <div class="menu__container menu--la-note-enchantee">
+
+            <div class="menu__top">
+                <i class="fas fa-music"></i>
+                <h2>La note enchantée</h2>
+            </div>
+
+            <div class="menu__content">
+                <h3><span class="underline">Prélude</span></h3>
+                <p><span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span
+                        class="price">98€</span></p>
+                <p><span>Caviar osciètre sur blini à la farine de blé noir</span><span class="price">115€</span></p>
+                <p><span>Homard et espuma de potiron mariné aux zests d'orange</span><span class="price">89€</span></p>
+                <p><span>Foie gras de canard cuit entier, confiture de figue et pain toasté</span><span
+                        class="price">105€</span></p>
+
+                <h3><span class="underline">Point d'orgue</span></h3>
+                <p><span>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave</span><span
+                        class="price">102€</span></p>
+                <p><span>Langoustine poêlée, purée de patate douce</span><span class="price">205€</span></p>
+                <p><span>Mijoté de queue de boeuf et riz sauvage aux zests de citron</span><span
+                        class="price">169€</span></p>
+
+                <h3><span class="underline">Mouvement final</span></h3>
+                <p><span>Macaron noisette et chocolat, glace au caramel brun et sel de Guérande<span></p>
+                <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
+                <p><span>Tarte au citron meringuée destructurée</span></p>
+            </div>
+
+            <div class="menu__bottom">
+                <i class="fas fa-music"></i>
+                <p>La note enchantée</p>
+            </div>
+        </div>
+    </main>
 
     <footer>
         <a href="./mentions_legales.html" class="legal-notice">
