--- a/pages/le_delice_des_papilles.html
+++ b/pages/le_delice_des_papilles.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ohmyfood!</title>
-    <meta name="description" content="Consultez le menu de 4 grands restaurants parisiens !">
+    <title>Le délice des papilles | Ohmyfood!</title>
     <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
     <link rel="stylesheet" href="../assets/font-awesome/css/all.min.css">
