--- a/index.html
+++ b/index.html
@@ -15,37 +15,39 @@
 
 <body>
     <header>
-        <div class="logo">
+        <a href="index.html">
+            <div class="logo">
             <h1>ohmyfood</h1>
         </div>
+        </a>
     </header>
 
     <main>
 
-        <a href="./pages/la_note_enchantee.html" class="card menu menu--la-note-enchantee">
-            <div class="menu__box-content">
+        <a href="./pages/la_note_enchantee.html" class="card menus__box menus--la-note-enchantee">
+            <div class="menus__box-content">
                 <i class="fas fa-music"></i>
                 <h2>La note enchantée</h2>
                 <p>MENU</p>
             </div>
         </a>
 
-        <a href="./pages/le_chic_a_la_francaise.html" class="card menu--le-chic-a-la-francaise">
-            <div class="menu__box-content">
+        <a href="./pages/le_chic_a_la_francaise.html" class="card menus__box menus--le-chic-a-la-francaise">
+            <div class="menus__box-content">
                 <h2>Le chic à la française</h2>
                 <p>Menu</p>
             </div>
         </a>
 
-        <a href="./pages/le_delice_des_papilles.html" class="card menu__box menu--le-delice-des-papilles">
-            <div class="menu__box-content">
+        <a href="./pages/le_delice_des_papilles.html" class="card menus__box menus--le-delice-des-papilles">
+            <div class="menus__box-content">
                 <h2>Le délice des papilles</h2>
                 <p>Menu</p>
             </div>
         </a>
 
-        <a href="./pages/la_palette_du_gout.html" class="card menu__box menu--la-palette-du-gout">
-            <div class="menu__box-content">
+        <a href="./pages/la_palette_du_gout.html" class="card menus__box menus--la-palette-du-gout">
+            <div class="menus__box-content">
                 <h2>La palette du goût</h2>
                 <p>Menu</p>
             </div>
