add svg and improve style

--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ohmyfood!</title>
-    <meta name="description" content="Consultez le menu de 4 grands restaurants parisiens !">
-    <link rel="shortcut icon" href="assets/image/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
-    <link rel="stylesheet" href="assets/font-awesome/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Consultez le menu de 4 grands restaurants parisiens !" />
+    <link rel="shortcut icon" href="assets/image/favicon.ico" type="image/x-icon" />
+
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap" />
+    <link rel="stylesheet" href="assets/font-awesome/css/all.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
     <header>
         <a href="index.html">
             <div class="logo">
-            <h1>ohmyfood</h1>
-        </div>
+                <h1>ohmyfood</h1>
+            </div>
         </a>
     </header>
 
     <main>
-
         <a href="./pages/la_note_enchantee.html" class="card menus__box menus--la-note-enchantee">
             <div class="menus__box-content">
-                <i class="fas fa-music"></i>
+                <img class="icon-music" src="assets/image/music.svg" />
                 <h2>La note enchantée</h2>
                 <p>MENU</p>
             </div>
@@ -34,7 +35,7 @@
 
         <a href="./pages/le_chic_a_la_francaise.html" class="card menus__box menus--le-chic-a-la-francaise">
             <div class="menus__box-content">
-                <h2>Le chic à la française</h2>
+                <h2 id="chic-title">Le chic à la française</h2>
                 <p>Menu</p>
             </div>
         </a>
@@ -52,13 +53,11 @@
                 <p>Menu</p>
             </div>
         </a>
-
     </main>
 
     <div class="soon-btn">
         <div class="btn">Prochainement</div>
     </div>
-
 
     <footer>
         <a href="./mentions_legales.html" class="legal-notice">
