add svg and finalize menu 1

--- a/pages/mentions_legales.html
+++ b/pages/mentions_legales.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Mentions légales | Ohmyfood!</title>
+    <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap">
-    <link rel="stylesheet" href="assets/font-awesome/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css" media="all and (max-width: 700px)">
-    <title></title>
+        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap" />
+    <link rel="stylesheet" href="../assets/font-awesome/css/all.min.css" />
+    <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
