--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a href="index.html">
+        <a href="./index.html">
             <div class="logo">
                 <h1>ohmyfood</h1>
             </div>
@@ -56,11 +56,16 @@
     </main>
 
     <div class="soon-btn">
-        <div class="btn">Prochainement</div>
+        <div class="btn">
+            <span>Prochainement</span>
+            <span class="dot">.</span>
+            <span class="dot">.</span>
+            <span class="dot">.</span>
+        </div>
     </div>
 
     <footer>
-        <a href="./mentions_legales.html" class="legal-notice">
+        <a href="./pages/mentions_legales.html" class="legal-notice">
             Mentions légales
         </a>
 
