--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -8,16 +8,18 @@
   <title>La note enchantée | Ohmyfood!</title>
   <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap" />
+    href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire:100,400|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap" />
   <link rel="stylesheet" href="../assets/font-awesome/css/all.min.css" />
   <link rel="stylesheet" href="../css/style.css" />
 </head>
 
 <body>
   <header>
-    <div class="logo">
-      <h1>ohmyfood</h1>
-    </div>
+    <a href="../index.html">
+      <div class="logo">
+        <h1>ohmyfood</h1>
+      </div>
+    </a>
   </header>
 
   <div class="menu__header">
@@ -27,12 +29,16 @@
   <main class="menu--main">
     <div class="menu__container menu--la-note-enchantee">
       <div class="menu__top">
-        <img class="icon-music" src="../assets/image/music.svg" />
+        <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
         <h2>La note enchantée</h2>
       </div>
 
       <div class="menu__content">
-        <h3><span class="underline">Prélude</span></h3>
+        <h3>
+          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <span class="underline">Prélude</span>
+          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+        </h3>
         <p>
           <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span class="price">98€</span>
         </p>
@@ -47,7 +53,11 @@
             toasté</span><span class="price">105€</span>
         </p>
 
-        <h3><span class="underline">Point d'orgue</span></h3>
+        <h3>
+          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <span class="underline">Point d'orgue</span>
+          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+        </h3>
         <p>
           <span>
             Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span><span class="price">102€</span>
@@ -64,7 +74,11 @@
           </span>
         </p>
 
-        <h3><span class="underline">Mouvement final</span></h3>
+        <h3>
+          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <span class="underline">Mouvement final</span>
+          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+        </h3>
         <p>
           <span>
             Macaron noisette et chocolat, glace au caramel brun et sel de
