add css animations

--- a/pages/mentions_legales.html
+++ b/pages/mentions_legales.html
@@ -8,7 +8,7 @@
     <title>Mentions légales | Ohmyfood!</title>
     <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400|Sriracha&display=swap" />
+        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400&display=swap" />
     <link rel="stylesheet" href="../assets/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="../css/style.css" />
 </head>
