--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>La note enchantée | Ohmyfood!</title>
+  <title>La palette du goût | Ohmyfood!</title>
   <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire:100,400|Kaushan+Script|Noto+Serif|Roboto:100,400&display=swap" />
@@ -27,7 +27,7 @@
   </div>
 
   <main class="menu--main">
-    <div class="menu__container menu--la-note-enchantee">
+    <div class="menu__container menu--la-palette-du-gout">
       <div class="menu__top">
         <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
         <h2>La note enchantée</h2>
