--- a/pages/le_delice_des_papilles.html
+++ b/pages/le_delice_des_papilles.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>La note enchantée | Ohmyfood!</title>
+    <title>Le délice des papilles | Ohmyfood!</title>
     <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire:100,400|Kaushan+Script|Noto+Serif|Roboto:100,400&display=swap" />
@@ -27,7 +27,7 @@
     </div>
 
     <main class="menu--main">
-        <div class="menu__container menu--la-note-enchantee">
+        <div class="menu__container menu--le-delice-des-papilles">
             <div class="menu__top">
                 <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
                 <h2>La note enchantée</h2>
@@ -91,9 +91,7 @@
                 <p><span>Tarte au citron meringuée destructurée</span></p>
             </div>
 
-            <div class="menu__bottom">
-                <img class="icon-music" src="../assets/image/music.svg" />
-                <p>La note enchantée</p>
+            <div class="menu__footer">
             </div>
         </div>
     </main>
