--- a/pages/le_chic_a_la_francaise.html
+++ b/pages/le_chic_a_la_francaise.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>La note enchantée | Ohmyfood!</title>
+    <title>Le chic à la française | Ohmyfood!</title>
     <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire:100,400|Kaushan+Script|Noto+Serif|Roboto:100,400&display=swap" />
@@ -23,78 +23,83 @@
     </header>
 
     <div class="menu__header">
-        <h1>La note enchantée</h1>
+        <h1>Le chic à la française</h1>
     </div>
 
     <main class="menu--main">
-        <div class="menu__container menu--la-note-enchantee">
+        <div class="menu__container menu--le-chic-a-la-francaise">
             <div class="menu__top">
-                <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
-                <h2>La note enchantée</h2>
+                <h2>Le chic à la française</h2>
             </div>
 
             <div class="menu__content">
-                <h3>
-                    <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                    <span class="underline">Prélude</span>
-                    <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                </h3>
-                <p>
-                    <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span
-                        class="price">98€</span>
-                </p>
-                <p>
-                    <span>Caviar osciètre sur blini à la farine de blé noir</span><span class="price">115€</span>
-                </p>
-                <p>
-                    <span>Homard et espuma de potiron mariné aux zests d'orange</span><span class="price">89€</span>
-                </p>
-                <p>
-                    <span>Foie gras de canard cuit entier, confiture de figue et pain
-                        toasté</span><span class="price">105€</span>
-                </p>
 
-                <h3>
-                    <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                    <span class="underline">Point d'orgue</span>
-                    <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                </h3>
-                <p>
-                    <span>
-                        Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span><span
-                        class="price">102€</span>
-                </p>
-                <p>
-                    <span>Langoustine poêlée, purée de patate douce</span><span class="price">205€</span>
-                </p>
-                <p>
-                    <span>
-                        Mijoté de queue de boeuf et riz sauvage aux zests de citron
-                    </span>
-                    <span class="price">
-                        169€
-                    </span>
-                </p>
+                <div class="menu__content--color-orange">
+                    <h3>
+                        <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                        <span class="underline">Prélude</span>
+                        <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                    </h3>
+                    <p>
+                        <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span
+                            class="price">98€</span>
+                    </p>
+                    <p>
+                        <span>Caviar osciètre sur blini à la farine de blé noir</span><span class="price">115€</span>
+                    </p>
+                    <p>
+                        <span>Homard et espuma de potiron mariné aux zests d'orange</span><span class="price">89€</span>
+                    </p>
+                    <p>
+                        <span>Foie gras de canard cuit entier, confiture de figue et pain
+                            toasté</span><span class="price">105€</span>
+                    </p>
+                </div>
 
-                <h3>
-                    <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                    <span class="underline">Mouvement final</span>
-                    <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                </h3>
-                <p>
-                    <span>
-                        Macaron noisette et chocolat, glace au caramel brun et sel de
-                        Guérande
-                    </span>
-                </p>
-                <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
-                <p><span>Tarte au citron meringuée destructurée</span></p>
+                <div class="menu__content--color-purple">
+                    <h3>
+                        <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                        <span class="underline">Point d'orgue</span>
+                        <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                    </h3>
+                    <p>
+                        <span>
+                            Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span><span
+                            class="price">102€</span>
+                    </p>
+                    <p>
+                        <span>Langoustine poêlée, purée de patate douce</span><span class="price">205€</span>
+                    </p>
+                    <p>
+                        <span>
+                            Mijoté de queue de boeuf et riz sauvage aux zests de citron
+                        </span>
+                        <span class="price">
+                            169€
+                        </span>
+                    </p>
+                </div>
+
+                <div class="menu__content--color-blue">
+                    <h3>
+                        <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                        <span class="underline">Mouvement final</span>
+                        <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                    </h3>
+                    <p>
+                        <span>
+                            Macaron noisette et chocolat, glace au caramel brun et sel de
+                            Guérande
+                        </span>
+                    </p>
+                    <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
+                    <p><span>Tarte au citron meringuée destructurée</span></p>
+                </div>
             </div>
 
-            <div class="menu__bottom">
-                <img class="icon-music" src="../assets/image/music.svg" />
-                <p>La note enchantée</p>
+            <div class="menu__footer">
             </div>
+
         </div>
     </main>
 
