add svg and continue menu pages

--- a/pages/le_chic_a_la_francaise.html
+++ b/pages/le_chic_a_la_francaise.html
@@ -29,71 +29,99 @@
     <main class="menu--main">
         <div class="menu__container menu--le-chic-a-la-francaise">
             <div class="menu__top">
-                <h2>Le chic à la française</h2>
+                <h2 id="le-chic-title">Le chic à la française</h2>
             </div>
 
             <div class="menu__content">
 
                 <div class="menu__content--color-orange">
                     <h3>
-                        <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                        <span class="underline">Prélude</span>
-                        <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
+                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
+                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                        </svg>
+
+                        <span class="underline">Pour se mettre en appétit</span>
+
+                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
+                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
+                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                        </svg>
+
                     </h3>
                     <p>
-                        <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span
-                            class="price">98€</span>
+                        <span>Tartare de poulpe acidulé aux zests d'orange</span>
+                        <span class="price">79€</span>
                     </p>
                     <p>
-                        <span>Caviar osciètre sur blini à la farine de blé noir</span><span class="price">115€</span>
+                        <span>Velouté de légumes d'antan</span>
+                        <span class="price">57€</span>
                     </p>
                     <p>
-                        <span>Homard et espuma de potiron mariné aux zests d'orange</span><span class="price">89€</span>
-                    </p>
-                    <p>
-                        <span>Foie gras de canard cuit entier, confiture de figue et pain
-                            toasté</span><span class="price">105€</span>
+                        <span>Soupe à l'oignon revisitée</span>
+                        <span class="price">57€</span>
                     </p>
                 </div>
 
                 <div class="menu__content--color-purple">
                     <h3>
-                        <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                        <span class="underline">Point d'orgue</span>
-                        <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
+                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
+                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                        </svg>
+
+                        <span class="underline">Plaisir des papilles</span>
+
+                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
+                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
+                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                        </svg>
+                        </span>
                     </h3>
                     <p>
-                        <span>
-                            Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span><span
-                            class="price">102€</span>
+                        <span>Coquilles Saint-Jacques accompangées d'une purée de panais</span>
+                        <span class="price">95€</span>
                     </p>
                     <p>
-                        <span>Langoustine poêlée, purée de patate douce</span><span class="price">205€</span>
+                        <span>Magret de canard et parmentier de pommes de terres</span>
+                        <span class="price">88€</span>
                     </p>
                     <p>
-                        <span>
-                            Mijoté de queue de boeuf et riz sauvage aux zests de citron
-                        </span>
-                        <span class="price">
-                            169€
-                        </span>
+                        <span>Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes</span>
+                        <span class="price">175€</span>
                     </p>
                 </div>
 
                 <div class="menu__content--color-blue">
                     <h3>
-                        <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                        <span class="underline">Mouvement final</span>
-                        <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
+                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
+                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                        </svg>
+
+                        <span class="underline">Gourmandises sucrées</span>
+
+                        <svg class="line-menu-2" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="331.703px" height="19px"
+                            viewBox="0 0 331.703 19" style="enable-background:new 0 0 331.703 19;" xml:space="preserve">
+                            <path d="M331.703,8.475c0,0-30,0-43-7.333c0,0-161.332,8.667-285.332,7.333c0,0,250.713,3.667,285.379,9
+                            C288.75,17.475,305.703,9.475,331.703,8.475z" />
+                        </svg>
+
                     </h3>
-                    <p>
-                        <span>
-                            Macaron noisette et chocolat, glace au caramel brun et sel de
-                            Guérande
-                        </span>
-                    </p>
-                    <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
-                    <p><span>Tarte au citron meringuée destructurée</span></p>
+                    <p><span>Pétales de violettes glacés et purée de noisettes</span></p>
+                    <p><span>Fondant au chocolat revisité</span></p>
+                    <p><span>Millefeuille croustillant</span></p>
                 </div>
             </div>
 
@@ -102,6 +130,12 @@
 
         </div>
     </main>
+
+    <div class="return-btn">
+        <div class="btn">
+            <a href="../index.html">Retour</a>
+        </div>
+    </div>
 
     <footer>
         <a href="./mentions_legales.html" class="legal-notice">
