--- a/pages/le_delice_des_papilles.html
+++ b/pages/le_delice_des_papilles.html
@@ -23,78 +23,128 @@
     </header>
 
     <div class="menu__header">
-        <h1>La note enchantée</h1>
+        <h1>Le délice des papilles</h1>
     </div>
 
     <main class="menu--main">
         <div class="menu__container menu--le-delice-des-papilles">
             <div class="menu__top">
-                <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
-                <h2>La note enchantée</h2>
+                <h2>Le délice des papilles</h2>
             </div>
 
             <div class="menu__content">
-                <h3>
-                    <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                    <span class="underline">Prélude</span>
-                    <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                </h3>
+
+                <div class="menu__content--color-dark-blue">
+                    <h3>
+                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
+                            viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
+                            <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
+	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
+                        </svg>
+
+                        <span class="underline menu__content--color-black">Pour bien commencer</span>
+
+                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
+                            height="20.312px" viewBox="0 0 349.479 20.312"
+                            style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
+                            <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
+	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
+                        </svg>
+                    </h3>
+                </div>
                 <p>
-                    <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span
-                        class="price">98€</span>
+                    <span>Tartare de thon assaisonné au yuzu</span>
+                    <span class="price">55€</span>
                 </p>
                 <p>
-                    <span>Caviar osciètre sur blini à la farine de blé noir</span><span class="price">115€</span>
+                    <span>Bouchée de homard croustillant et sa farandole de petits légumes</span>
+                    <span class="price">89€</span>
                 </p>
                 <p>
-                    <span>Homard et espuma de potiron mariné aux zests d'orange</span><span class="price">89€</span>
-                </p>
-                <p>
-                    <span>Foie gras de canard cuit entier, confiture de figue et pain
-                        toasté</span><span class="price">105€</span>
+                    <span>Velouté de cèpes aux truffes</span>
+                    <span class="price">56€</span>
                 </p>
 
-                <h3>
-                    <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                    <span class="underline">Point d'orgue</span>
-                    <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                </h3>
+                <div class="menu__content--color-medium-blue">
+                    <h3>
+                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
+                            viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
+                            <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
+	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
+                        </svg>
+
+                        <span class="underline menu__content--color-black">Pour bien continuer</span>
+
+                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
+                            height="20.312px" viewBox="0 0 349.479 20.312"
+                            style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
+                            <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
+	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
+                        </svg>
+                    </h3>
+                </div>
+
                 <p>
-                    <span>
-                        Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span><span
-                        class="price">102€</span>
+                    <span>Poulet rôti aux herbes de provence et sa crème de truffe</span>
+                    <span class="price">110€</span>
                 </p>
                 <p>
-                    <span>Langoustine poêlée, purée de patate douce</span><span class="price">205€</span>
+                    <span>Langouste rôtie et ses légumes de saison</span>
+                    <span class="price">225€</span>
                 </p>
                 <p>
-                    <span>
-                        Mijoté de queue de boeuf et riz sauvage aux zests de citron
-                    </span>
-                    <span class="price">
-                        169€
-                    </span>
+                    <span>Côte de boeuf angus et sa purée de panais</span>
+                    <span class="price">115€</span>
                 </p>
 
-                <h3>
-                    <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                    <span class="underline">Mouvement final</span>
-                    <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-                </h3>
+                <div class="menu__content--color-light-blue">
+                    <h3>
+                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="346px" height="18px"
+                            viewBox="0 0 346 18" style="enable-background:new 0 0 346 18;" xml:space="preserve">
+                            <path d="M2,2.311c0,0,2.666,13.333,21.333,13.833S344.5,16.311,344.5,16.311s-1.834-1.058-3.5-6.946
+	                    L27.166,8.644C27.166,8.644,14.833,9.977,2,2.311z" />
+                        </svg>
+
+                        <span class="underline menu__content--color-black">Pour bien terminer</span>
+
+                        <svg class="line-menu-3" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="349.479px"
+                            height="20.312px" viewBox="0 0 349.479 20.312"
+                            style="enable-background:new 0 0 349.479 20.312;" xml:space="preserve">
+                            <path d="M346.754,3.873c0,0-2.678,13.333-21.436,13.833S2.589,17.873,2.589,17.873s1.843-1.058,3.517-6.946
+	                    l315.359-0.721C321.465,10.207,333.859,11.54,346.754,3.873z" />
+                        </svg>
+                    </h3>
+                </div>
                 <p>
-                    <span>
-                        Macaron noisette et chocolat, glace au caramel brun et sel de
-                        Guérande
-                    </span>
+                    <span>Farandole de desserts du chef</span>
+                    <span class="price">55€</span>
                 </p>
-                <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
-                <p><span>Tarte au citron meringuée destructurée</span></p>
+                <p>
+                    <span>Crème brulée revisitée</span>
+                    <span class="price">60€</span>
+                </p>
+                <p>
+                    <span>Tiramisu à la noisette</span>
+                    <span class="price">55€</span>
+                </p>
             </div>
 
             <div class="menu__footer">
             </div>
         </div>
     </main>
+
+    <div class="return-btn">
+        <div class="btn">
+            <a href="../index.html">Retour</a>
+        </div>
+    </div>
 
     <footer>
         <a href="./mentions_legales.html" class="legal-notice">
