--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -30,23 +30,26 @@
     <div class="menu__container menu--la-note-enchantee">
       <div class="menu__top">
         <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
-        <h2 id="note-enchantee-title">La note enchantée</h2>
+        <h2 id="la-note-title">La note enchantée</h2>
       </div>
 
-      <div class="menu__content">
+      <div class="menu__content menu__content--color-black">
         <h3>
-          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
           <span class="underline">Prélude</span>
-          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
         </h3>
         <p>
-          <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span class="price">98€</span>
+          <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span>
+          <span class="price">98€</span>
         </p>
         <p>
-          <span>Caviar osciètre sur blini à la farine de blé noir</span><span class="price">115€</span>
+          <span>Caviar osciètre sur blini à la farine de blé noir</span>
+          <span class="price">115€</span>
         </p>
         <p>
-          <span>Homard et espuma de potiron mariné aux zests d'orange</span><span class="price">89€</span>
+          <span>Homard et espuma de potiron mariné aux zests d'orange</span>
+          <span class="price">89€</span>
         </p>
         <p>
           <span>Foie gras de canard cuit entier, confiture de figue et pain
@@ -54,30 +57,27 @@
         </p>
 
         <h3>
-          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
           <span class="underline">Point d'orgue</span>
-          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
         </h3>
         <p>
-          <span>
-            Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span><span class="price">102€</span>
+          <span>Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span>
+          <span class="price">102€</span>
         </p>
         <p>
-          <span>Langoustine poêlée, purée de patate douce</span><span class="price">205€</span>
+          <span>Langoustine poêlée, purée de patate douce</span>
+          <span class="price">205€</span>
         </p>
         <p>
-          <span>
-            Mijoté de queue de boeuf et riz sauvage aux zests de citron
-          </span>
-          <span class="price">
-            169€
-          </span>
+          <span>Mijoté de queue de boeuf et riz sauvage aux zests de citron</span>
+          <span class="price">169€</span>
         </p>
 
         <h3>
-          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
           <span class="underline">Mouvement final</span>
-          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
+          <img class="line-menu-1" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
         </h3>
         <p>
           <span>
@@ -89,12 +89,18 @@
         <p><span>Tarte au citron meringuée destructurée</span></p>
       </div>
 
-      <div class="menu__bottom">
+      <div class="menu--la-note-enchantee__bottom">
         <img class="icon-music" src="../assets/image/music.svg" />
         <p>La note enchantée</p>
       </div>
     </div>
   </main>
+
+  <div class="return-btn">
+    <div class="btn">
+      <a href="../index.html">Retour</a>
+    </div>
+  </div>
 
   <footer>
     <a href="./mentions_legales.html" class="legal-notice">
