--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>La palette du goût | Ohmyfood!</title>
+  <title>La palette du gôut | Ohmyfood!</title>
   <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire:100,400|Kaushan+Script|Noto+Serif|Roboto:100,400&display=swap" />
@@ -23,78 +23,93 @@
   </header>
 
   <div class="menu__header">
-    <h1>La note enchantée</h1>
+    <h1>La palette du gôut</h1>
   </div>
 
   <main class="menu--main">
     <div class="menu__container menu--la-palette-du-gout">
       <div class="menu__top">
-        <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
-        <h2>La note enchantée</h2>
+        <h2>La palette du gôut</h2>
       </div>
 
       <div class="menu__content">
-        <h3>
-          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-          <span class="underline">Prélude</span>
-          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-        </h3>
+
+        <div class="menu__content--color-green">
+          <h3>
+            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+            <span class="underline menu__content--color-black">Esquisse</span>
+            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+          </h3>
+        </div>
+
         <p>
-          <span>Ravioles de foie gras accompagnés de leur crème à la truffe</span><span class="price">98€</span>
+          <span>Fricassée d'escargot au piment d'espelette</span>
+          <span class="price">60€</span>
         </p>
         <p>
-          <span>Caviar osciètre sur blini à la farine de blé noir</span><span class="price">115€</span>
+          <span>Oeuf au plat assaisonné à la truffe sur lit de caviar</span>
+          <span class="price">55€</span>
         </p>
         <p>
-          <span>Homard et espuma de potiron mariné aux zests d'orange</span><span class="price">89€</span>
-        </p>
-        <p>
-          <span>Foie gras de canard cuit entier, confiture de figue et pain
-            toasté</span><span class="price">105€</span>
+          <span>Foie gras de canard mi-cuit et ses copeaux de truffe noire</span>
+          <span class="price">65€</span>
         </p>
 
-        <h3>
-          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-          <span class="underline">Point d'orgue</span>
-          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-        </h3>
+        <div class="menu__content--color-green">
+          <h3>
+            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+            <span class="underline menu__content--color-black">Oeuvre de maître</span>
+            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+          </h3>
+        </div>
+
         <p>
-          <span>
-            Noix de coquilles Saint-Jacques sur lit de purée de céleri-rave </span><span class="price">102€</span>
+          <span>Filet de boeuf aux herbes accompagné de sa ribambelle de légumes</span>
+          <span class="price">70€</span>
         </p>
         <p>
-          <span>Langoustine poêlée, purée de patate douce</span><span class="price">205€</span>
+          <span>Parmentier de queue de boeuf à la truffe noire sur sa purée de panais</span>
+          <span class="price">85€</span>
         </p>
         <p>
-          <span>
-            Mijoté de queue de boeuf et riz sauvage aux zests de citron
-          </span>
-          <span class="price">
-            169€
-          </span>
+          <span>Filet de Turbot aux agrumes</span>
+          <span class="price">125€</span>
         </p>
 
-        <h3>
-          <img class="line" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-          <span class="underline">Mouvement final</span>
-          <img class="line-right" src="../assets/image/line_menu_1.svg" alt="ligne menu" />
-        </h3>
+        <div class="menu__content--color-green">
+          <h3>
+            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+            <span class="underline menu__content--color-black">Au sommet de l'art</span>
+            <img class="line-menu-1" src="../assets/image/line_menu_4.svg" alt="ligne menu" />
+          </h3>
+        </div>
+
         <p>
-          <span>
-            Macaron noisette et chocolat, glace au caramel brun et sel de
-            Guérande
-          </span>
+          <span>Paris-Brest revisité</span>
+          <span class="price">55€</span>
         </p>
-        <p><span>Baba au rhum revisité avec son coulis de citron</span></p>
-        <p><span>Tarte au citron meringuée destructurée</span></p>
+        <p>
+          <span>Macaron au chocolat d'exception et glace à la vanille de Madagascar</span>
+          <span class="price">65€</span>
+        </p>
+        <p>
+          <span>Mousse au chocolat au piment d'espelette et à la truffe noire</span>
+          <span class="price">60€</span>
+        </p>
       </div>
 
-      <div class="menu__bottom">
-        <img class="icon-music" src="../assets/image/music.svg" />
-        <p>La note enchantée</p>
+
+      <div class="menu__footer">
       </div>
     </div>
+
   </main>
+
+  <div class="return-btn">
+    <div class="btn">
+      <a href="../index.html">Retour</a>
+    </div>
+  </div>
 
   <footer>
     <a href="./mentions_legales.html" class="legal-notice">
