--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="assets/image/favicon.ico" type="image/x-icon" />
 
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire|Kaushan+Script|Noto+Serif|Roboto:100,400&display=swap" />
+        href="https://fonts.googleapis.com/css?family=Croissant+One%7CParisienne%7CDevonshire%7CKaushan+Script%7CNoto+Serif%7CRoboto:100,400&display=swap" />
     <link rel="stylesheet" href="assets/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 </head>
@@ -27,7 +27,7 @@
     <main>
         <a href="./pages/la_note_enchantee.html" class="card menus__box menus--la-note-enchantee">
             <div class="menus__box-content">
-                <img class="icon-music" src="assets/image/music.svg" />
+                <img class="icon-music" src="assets/image/music.svg" alt="music note" />
                 <h2>La note enchantée</h2>
                 <p>MENU</p>
             </div>
