--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -8,7 +8,7 @@
   <title>La palette du gôut | Ohmyfood!</title>
   <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Croissant+One|Parisienne|Devonshire:100,400|Kaushan+Script|Noto+Serif|Roboto:100,400&display=swap" />
+    href="https://fonts.googleapis.com/css?family=Croissant+One%7CParisienne%7CDevonshire%7CKaushan+Script%7CNoto+Serif%7CRoboto:100,400&display=swap" />
   <link rel="stylesheet" href="../assets/font-awesome/css/all.min.css" />
   <link rel="stylesheet" href="../css/style.css" />
 </head>
