--- a/pages/la_palette_du_gout.html
+++ b/pages/la_palette_du_gout.html
@@ -106,7 +106,7 @@
 
   <div class="return-btn">
     <div class="btn">
-      <a href="../index.html">Retour</a>
+      <a href="../index.html">Accueil</a>
     </div>
   </div>
 
