--- a/pages/le_delice_des_papilles.html
+++ b/pages/le_delice_des_papilles.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="../assets/image/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Croissant+One%7CParisienne%7CDevonshire%7CKaushan+Script%7CNoto+Serif%7CRoboto:100,400&display=swap" />
-    <link rel="stylesheet" href="../assets/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="../css/style.css" />
 </head>
 
@@ -142,7 +141,7 @@
 
     <div class="return-btn">
         <div class="btn">
-            <a href="../index.html">Retour</a>
+            <a href="../index.html">Accueil</a>
         </div>
     </div>
 
