--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -97,7 +97,7 @@
 
   <div class="return-btn">
     <div class="btn">
-      <a href="../index.html">Retour</a>
+      <a href="../index.html">Accueil</a>
     </div>
   </div>
 
