--- a/pages/le_chic_a_la_francaise.html
+++ b/pages/le_chic_a_la_francaise.html
@@ -132,7 +132,7 @@
 
     <div class="return-btn">
         <div class="btn">
-            <a href="../index.html">Retour</a>
+            <a href="../index.html">Accueil</a>
         </div>
     </div>
 
