--- a/pages/la_note_enchantee.html
+++ b/pages/la_note_enchantee.html
@@ -29,7 +29,7 @@
     <div class="menu__container menu--la-note-enchantee">
       <div class="menu__top">
         <img class="icon-music" src="../assets/image/music.svg" alt="music note" />
-        <h2 id="la-note-title">La note enchantée</h2>
+        <h2>La note enchantée</h2>
       </div>
 
       <div class="menu__content menu__content--color-black">
