--- a/pages/le_chic_a_la_francaise.html
+++ b/pages/le_chic_a_la_francaise.html
@@ -28,7 +28,7 @@
     <main class="menu--main">
         <div class="menu__container menu--le-chic-a-la-francaise">
             <div class="menu__top">
-                <h2 id="le-chic-title">Le chic à la française</h2>
+                <h2>Le chic à la française</h2>
             </div>
 
             <div class="menu__content">
